Password Manager 25.10.1
* Java 25
* Updated startup sequence when opening existing file